# uchile_robotics_jaime

jaime_behaviour_trees/: main.py  mission_tree.py
jaime_behaviour_trees/behaviours/: Conversation.py  FindAndAlignFace.py  InitializeRobot.py  IsAtGoal.py  NavigateToGoal.py  NeckConversationPose.py  NeckSearchPose.py  ObtainRobotLocalization.py  ReceiveMission.py
jaime_bringup/: CMakeLists.txt  README.md  package.xml
jaime_bringup/install/: local_setup.sh  setup.sh  setup.zsh
jaime_bringup/install/jaime_bringup/share/ament_index/resource_index/package_run_dependencies/: jaime_bringup
jaime_bringup/install/jaime_bringup/share/ament_index/resource_index/parent_prefix_path/: jaime_bringup
jaime_bringup/install/jaime_bringup/share/jaime_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
jaime_bringup/install/jaime_bringup/share/jaime_bringup/cmake/: jaime_bringupConfig.cmake
jaime_bringup/install/jaime_bringup/share/jaime_bringup/launch/localization/: jaime_cartographer.launch.py  localization_launch.py
jaime_bringup/install/jaime_bringup/share/jaime_bringup/launch/navigation/: navigation_launch.py
jaime_bringup/install/jaime_bringup/share/jaime_bringup/launch/robot/: jaime_basic.launch.py  jaime_full.launch.py
jaime_bringup/install/jaime_bringup/share/jaime_bringup/launch/tools/rviz/: jaime.rviz
jaime_bringup/install/jaime_bringup/share/jaime_bringup/maps/env_30_may_2025/: env_30_may_2025.yaml
jaime_bringup/install/jaime_bringup/share/jaime_bringup/maps/quimica/: quimica_manual.pgm
jaime_bringup/install/jaime_bringup/share/jaime_bringup/maps/stage_5_may_2025/: stage_5_may_2025.pgm  stage_5_may_2025.yaml
jaime_bringup/install/jaime_bringup/share/jaime_bringup/maps/stage_5_may_2025/install/: local_setup.sh  setup.ps1
jaime_bringup/install/jaime_bringup/share/jaime_bringup/maps/stage_5_may_2025/log/: latest_build
jaime_bringup/install/jaime_bringup/share/jaime_bringup/params/localization/: amcl.yaml  mapper_params_online_async.yaml
jaime_bringup/install/jaime_bringup/share/jaime_bringup/params/localization/cartographer/: cartographer_config.lua
jaime_bringup/install/jaime_bringup/share/jaime_bringup/params/navigation/: nav2_params.yaml
jaime_bringup/launch/install/: local_setup.sh  setup.sh
jaime_bringup/launch/localization/: slam_toolbox.launch.py
jaime_bringup/launch/log/: latest_build
jaime_bringup/launch/robot/: jaime_full.launch.py  jaime_slam.launch.py
jaime_bringup/log/: latest_build
jaime_bringup/maps/: mapa_lab_21_04.pgm  mapa_lab_21_04.yaml  mapa_lab_22_04.pgm  mapa_lab_22_04.yaml
jaime_bringup/maps/31_jul_2025_stage_auto/: mapa.pgm  mapa.yaml
jaime_bringup/maps/env_30_may_2025/: env_30_may_2025.pgm
jaime_bringup/maps/quimica/: quimica_autonomo.pgm  quimica_autonomo.yaml  quimica_manual.yaml
jaime_bringup/maps/stage_5_may_2025/install/: setup.bash  setup.sh
jaime_bringup/params/localization/: amcl.yaml  mapper_params_online_async.yaml
jaime_bringup/params/maps/: maps.yaml
jaime_bringup/params/navigation/: nav2_params.yaml
jaime_core/: .gitignore  README.md
jaime_core/src/jaime_base/: CMakeLists.txt  LICENSE  package.xml
jaime_core/src/jaime_base/launch/: kobuki.launch.py
jaime_core/src/jaime_base/params/: kobuki.yaml
jaime_core/src/jaime_description/: CMakeLists.txt  package.xml
jaime_core/src/jaime_description/config/: ros2_controllers.yaml
jaime_core/src/jaime_description/launch/: display.launch.py  gazebo.launch.py  rsp.launch.py
jaime_core/src/jaime_description/meshes/: base_link.stl  l1_1.stl  l2_1.stl  l3_1.stl  l4_1.stl  l5_1.stl  l6_1.stl  l7_1.stl
jaime_core/src/jaime_description/rviz/: rviz.rviz
jaime_core/src/jaime_description/urdf/: jaime.xacro  kobuki_urdf.xacro  materials.xacro  ros2_control.xacro
jaime_core/src/jaime_joy/: CMakeLists.txt  package.xml
jaime_core/src/jaime_joy/launch/: joystick.launch.py
jaime_core/src/jaime_joy/params/: joystick.yaml  twist_mux.yaml
jaime_core/src/jaime_joy/src/: joystick_node.cpp
jaime_core/src/jaime_sensors/: CMakeLists.txt  package.xml
jaime_core/src/jaime_sensors/launch/joy/: joystick.launch.py
jaime_core/src/jaime_sensors/launch/lidar/: hokuyo.launch.py  rplidar_c1_launch.py
jaime_core/src/jaime_sensors/params/lidar/: rplidar_c1.yaml
jaime_core/src/jaime_sensors/params/rgbd/: asus_PS1080_PrimeSense.yaml  realsense.yaml
jaime_core/src/jaime_sensors/scripts/: laser_filter_node.py
jaime_core/src/jaime_tablet/: package.xml  setup.cfg  setup.py
jaime_core/src/jaime_tablet/jaime_tablet/: android_cam.py  file_publisher.py  media_sender.py  test_canmera.py
jaime_core/src/jaime_tablet/launch/: tablet_launch.py
jaime_core/src/jaime_testing/: CMakeLists.txt  package.xml
jaime_core/src/jaime_testing/scripts/: movement_test.py
jaime_highlevel/: CMakeLists.txt  package.xml
jaime_highlevel/scripts/: face.py  face_tracker.py
jaime_manipulation/: CMakeLists.txt
jaime_manipulation/Arduino/: Arduino Nano ATmega328p.txt
jaime_manipulation/Arduino/i2c_multiplexor_original/: i2c_multiplexor.ino
jaime_manipulation/Arduino/i2c_mutlyiplexor_definitive/: i2c_mutlyiplexor_definitive.ino
jaime_manipulation/install/: local_setup.sh  setup.sh
jaime_manipulation/launch/: test.launch.py
jaime_manipulation/scripts/: dynamixel_publish.py  fk_solution.py  local_planner.py  read_encoders.py
uchile_system/: .gitignore  README.md
uchile_system/bender/: README.md  docker-compose.yml
uchile_system/bender/config/: config.sh
uchile_system/bender/core/: Dockerfile  docker-compose.yml
uchile_system/bender/core/config/: config.sh
uchile_system/bender/skills/: Dockerfile  docker-compose.yml
uchile_system/bender/skills/config/: config.sh
uchile_system/jaime/: docker-compose.yml
uchile_system/jaime/config/: config.sh
uchile_system/jaime/core/: Dockerfile  docker-compose.yml
uchile_system/jaime/core/config/: config.sh
uchile_system/jaime/skills/: Dockerfile  docker-compose.yml
udev_rules/: 99-bender.rules  99-kobuki.rules  99-usb-serial.rules
(+21 files in other folders)
