<?xml version="1.0"?>
<package format="3">
  <name>jaime_bringup</name>
  <version>2.0.0</version>
  <description>The jaime_bringup package for ROS2 Jazzy</description>

  <maintainer email="bender.devel@gmail.com">Bender Team - UChile Homebreakers</maintainer>
  <author email="bender.devel@gmail.com">Bender Team - UChile Homebreakers</author>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Dependencies needed at runtime -->
  <exec_depend>urg_node2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>


  <!-- For tests -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
