<?xml version="1.0"?>
<package format="3">
  <name>jaime_joy</name>
  <version>2.0.0</version>
  <description>Jaime Joy - UChile Homebreakers</description>

  <maintainer email="bender.devel@gmail.com">Bender Team - UChile Homebreakers</maintainer>
  <author email="bender.devel@gmail.com">Bender Team - UChile Homebreakers</author>

  <license>MIT</license> 

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
